TERRAFORM - cours KubAdv/files/longhorn-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: longhorn-deploy
  name: longhorn-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: longhorn-deploy
  template:
    metadata:
      labels:
        app: longhorn-deploy
    spec:
      containers:
      - name: nginx
        image: nginx
        volumeMounts:
        - name: nginx-logs
          mountPath: /var/log/nginx
      - name: log-reader
        image: busybox
        command: ['sh', '-c', 'echo "Derniers logs du container nginx:" && tail -f /nginx-logs/access.log']
        volumeMounts:
        - name: nginx-logs
          mountPath: /nginx-logs
      volumes:
      - name: nginx-logs
        persistentVolumeClaim:
          claimName: longhorn-pvc
