TERRAFORM - cours KubAdv/files/nginx-s3-aws.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-s3-aws
spec:
  containers:
  - name: nginx
    image: nginx
    volumeMounts:
    - name: nginx-logs
      mountPath: /nginx-logs
  volumes:
  - name: nginx-logs
    persistentVolumeClaim: 
      claimName: s3-aws-prefix-pvc
