TERRAFORM - cours KubAdv/files/nginx-sa.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-sa
spec:
  serviceAccountName: nginx-sa
  containers:
  - name: nginx
    image: nginx:latest
    command: ["/bin/sh"]
    args: ["-c", "apt-get update && curl -LO https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl && chmod +x ./kubectl && mv ./kubectl /usr/local/bin/kubectl && nginx -g 'daemon off;'"]
    ports:
    - containerPort: 80
