TERRAFORM - cours KubAdv/files/services.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: world

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: europe
  name: europe-deploy #Modification du déploiement initiale pour que nginx gère / et /europe/
  namespace: world
spec:
  replicas: 2
  selector:
    matchLabels:
      app: europe
  template:
    metadata:
      labels:
        app: europe
    spec:
      containers:
      - args:
        - |
          mkdir -p /usr/share/nginx/html/europe 
          echo 'hello, you reached EUROPE via /europe' > /usr/share/nginx/html/europe/index.html
          echo 'hello, you reached EUROPE' > /usr/share/nginx/html/index.html
          nginx -g 'daemon off;'
        command:
        - /bin/sh
        - -c
        image: nginx:latest
        name: nginx-container
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: asia
  name: asia-deploy #Modification du déploiement initiale pour que nginx gère / et /asia/
  namespace: world
spec:
  replicas: 2
  selector:
    matchLabels:
      app: asia
  template:
    metadata:
      labels:
        app: asia
    spec:
      containers:
      - args:
        - |
          mkdir -p /usr/share/nginx/html/asia
          echo 'hello, you reached ASIA via /asia' > /usr/share/nginx/html/asia/index.html
          echo 'hello, you reached ASIA' > /usr/share/nginx/html/index.html
          nginx -g 'daemon off;'
        command:
        - /bin/sh
        - -c
        image: nginx:latest
        name: nginx-container
