TERRAFORM - cours KubAdv/files/asia-deploy-alb-aws-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: asia
  name: asia-nodeport-svc
  namespace: world
spec:
  ports:
  - nodePort: 31080
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: asia
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: asia
  name: asia-deploy
  namespace: world
spec:
  replicas: 2
  selector:
    matchLabels:
      app: asia
  template:
    metadata:
      labels:
        app: asia
    spec:
      containers:
      - args:
        - |
          mkdir -p /usr/share/nginx/html/asia
          echo 'hello, you reached ASIA via /asia' > /usr/share/nginx/html/asia/index.html
          echo 'hello, you reached ASIA' > /usr/share/nginx/html/index.html
          nginx -g 'daemon off;'
        command:
        - /bin/sh
        - -c
        image: nginx:latest
        name: nginx-container
