TERRAFORM - cours KubAdv/files/external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-service
  namespace: world
spec:
  type: ExternalName
  externalName: k8s-world-nlbservi-bca67a6fd1-64a324a59107cc79.elb.eu-central-1.amazonaws.com
