TERRAFORM - cours KubAdv/files/external-service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-service
  namespace: world
spec:
  type: ExternalName
  externalName: www.google.com
