TERRAFORM - cours KubAdv/files/letsencrypt-website-deploy-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: website-deploy
  name: website-deploy
  namespace: world
spec:
  replicas: 2
  selector:
    matchLabels:
      app: website-deploy
  template:
    metadata:
      labels:
        app: website-deploy
    spec:
      containers:
      - image: nginx
        name: nginx
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: website-deploy
  name: website-svc
  namespace: world
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: website-deploy
