TERRAFORM - cours KubAdv/files/nlb-aws-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nlb-service
  namespace: world
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "external"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "instance"
    service.beta.kubernetes.io/aws-load-balancer-subnets: subnet-0059b188d0015e236, subnet-0af534b7010c37f83
spec:
  type: LoadBalancer
  selector:
    app: asia
  ports:
    - port: 80
      targetPort: 80
