TERRAFORM - cours KubAdv/files/ingress-svc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: world
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /europe
            pathType: Prefix
            backend:
              service:
                name: europe-svc # Nom du service pour les pods europe
                port:
                  number: 80 # Port exposé par le service europe-svc 
          - path: /asia
            pathType: Prefix
            backend:
              service:
                name: asia-svc # Nom du service pour les pods asia
                port:
                  number: 80 # Port exposé par le service asia-svc
